--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,21 @@
   }
 }
 
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div {
+  height: 100%;
+}
+
 body {
+  --foreground-rgb: 0, 0, 0;
+
+  --background-start-rgb: 255, 204, 230;
+  --background-mid-rgb: 204, 204, 255;
+  --background-end-rgb: 204, 255, 204;
+
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: linear-gradient(to right, rgb(var(--background-start-rgb)), rgb(var(--background-mid-rgb)), rgb(var(--background-end-rgb)));
 }
